# nano_llm

./: LICENSE.txt  README.md  loader.ipynb  pyproject.toml  tokenize.ipynb
assets/: vocab.pkl
notebooks/: embeddings.ipynb  loader.ipynb  self_att.ipynb  tokenize.ipynb  weighted_attention.ipynb
src/nanollm/: attn.py  data.py  token.py
tests/: test_dataset.py  test_tokenizer.py
